--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "react-native-hr",
   "version": "1.0.0",
   "description": "Native React <Hr> Component",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "babel src/index.js --out-file dist/index.js --presets es2015,react"
+  },
   "author": "Gene Sy",
   "license": "ISC",
   "keywords": [
@@ -12,5 +15,10 @@
     "horizontal",
     "horizontal rule",
     "react-native-hr"
-  ]
+  ],
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
+  }
 }
